--- a/templates/references.bib
+++ b/templates/references.bib
@@ -1,4 +1,4 @@
-@r-arrow{,
+@Manual{r-arrow,
     title = {arrow: Integration to 'Apache' 'Arrow'},
     author = {Neal Richardson and Ian Cook and Nic Crane and Dewey Dunnington and Romain François and Jonathan Keane and Dragoș Moldovan-Grünfeld and Jeroen Ooms and Jacob Wujciak-Jens and {Apache Arrow}},
     year = {2025},
@@ -7,7 +7,7 @@
     doi = {10.32614/CRAN.package.arrow},
   }
 
-@r-sfarrow{,
+@Manual{r-sfarrow,
     title = {sfarrow: Read/Write Simple Feature Objects ('sf') with 'Apache' 'Arrow'},
     author = {Chris Jochem},
     year = {2021},
@@ -16,7 +16,7 @@
     doi = {10.32614/CRAN.package.sfarrow},
   }
 
-  @r-nanoparquet{,
+  @Manual{r-nanoparquet,
     title = {nanoparquet: Read and Write 'Parquet' Files},
     author = {Gábor Csárdi and Hannes Mühleisen},
     year = {2025},
