--- a/index.qmd
+++ b/index.qmd
@@ -196,6 +196,8 @@ Ok, then let me introduce you to the R packages I've been exploring and how they
 
 The R `arrow` package [@r-arrow] provides access to many of the features of the Apache Arrow C++ library for R users. The goal of arrow is to provide an Arrow C++ back-end to `dplyr`, and access to the Arrow C++ library through familiar base R and tidyverse functions, or R6 classes. The dedicated R package website is located [here](https://arrow.apache.org/docs/r/index.html).
 
+> That doesn't mean we need to know C++. It just means it is faster than packages that don't make use of C++ code for the same purpose. Think about [how `terra` is faster then `raster`](https://www.r-bloggers.com/2021/05/a-comparison-of-terra-and-raster-packages/){target="_blank"}, for instance.
+
 ### What can the arrow package do?
 
 The arrow package provides binding to the C++ functionality for a wide range of data analysis tasks.
